--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "still-there-modal",
   "version": "0.1.0",
+  "description": "A modal to check if the user is still active.",
+  "author": "Clinton Owen <clint@clintonowen.com>",
+  "license": "GNU GPLv3",
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +27,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0"
+  }
 }
