--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "devDependencies": {
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0"
+    "enzyme-adapter-react-16": "^1.8.0",
+    "mockdate": "^2.0.2"
   }
 }
